kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: static-server
    spec:
      containers:
      - name: static-server
        image: kali7va/static-server
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: config
          mountPath: /homework/conf
        lifecycle:
          preStop:
            exec:
              command: ["rm", "/homework/index.html"]
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: hw-pvc
      - name: config
        configMap:
          name: hw-cm
      nodeSelector:
        homework: 'true'
