kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/app-root: /index.html
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /index.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: hw-service
            port:
              number: 80
      - path: /conf/file
        pathType: Exact
        backend:
          service:
            name: hw-service
            port:
              number: 80
